@@ -1,4 +1,4 @@
 @set UPDATED 1 February 2007
 @set UPDATED-MONTH February 2007
-@set EDITION 2.2.0a1
-@set VERSION 2.2.0a1
+@set EDITION 2.2.0a2
+@set VERSION 2.2.0a2
