@@ -1,4 +1,4 @@
 @set UPDATED 9 October 2005
 @set UPDATED-MONTH October 2005
-@set EDITION 2.2.0a1
-@set VERSION 2.2.0a1
+@set EDITION 2.2.0a2
+@set VERSION 2.2.0a2
