@@ -2,6 +2,7 @@
 2.2.0
 
 	PrintFile("name") function added to alerts
+	List expansion in editfiles actions
 
 2.1.22 
 
